[package]
name = "best_macros"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "This crate was created for optimize  coding in RUST"
readme = "README.md"
repository = "https://github.com/tehnarenok/best_macros/"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"